FIX&FEAT:Corrige y añade funcionalidades a explorador de archivos

--- a/Semana3/Explorador de archivos/index.html
+++ b/Semana3/Explorador de archivos/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="./statics/style/style.css">
 </head>
 <body> 
-    <h1>Bienvenido</h1>
+    <h1>Bienvenidx</h1>
     <div class="contenedor">
         <form method="post" action="./dynamics/php/exp_arch_act.php" target="_self">
             <label for="nom">Usuario:</label><br>
                 <input type="text" id="nom" name="nombre" required /><br><br>
-            </label><br>
-            <label for="Casa">Casa:<!----><br>
+            </label><br><br><br>
+            <label for="Casa">Casa:<!---->
                 <select id="casa" name="casa" required="on">
                     <optgroup>
                         <option value="teporingos">Teporingos</option>
